# app/swagger.yaml
@@ -85,6 +85,33 @@ paths:
           description: return with message
         '400': # status code
           description: Invalid body data
+  /auth/admin-login:
+    post:
+      tags:
+        - Auth
+      summary: This is login endpoint for admin.
+      description: This Api endpoint is used for admin.
+      requestBody:
+        description: This Api endpoint is used to login.
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  example: admin@gmail.com
+                password:
+                  type: string
+                  example: admin@1511
+                pushToken:
+                  type: string
+                  example: yourdevicepushtoken
+      responses:
+        '201': # status code
+          description: return with object
+        '400': # status code
+          description: Invalid body data
   /user/project:
     post:
       tags:
@@ -420,6 +447,132 @@ paths:
                   type: string
                   example: test message
         required: true
+      responses:
+        '200': # status code
+          description: return with object
+        '400': # status code
+          description: Invalid body data
+      components:
+        securitySchemes:
+          bearerAuth: # arbitrary name for the security scheme
+            type: http
+            scheme: bearer
+            bearerFormat: JWT
+      security:
+        - BearerAuth: []
+  /admin/projects:
+    get:
+      tags:
+        - Admin
+      summary:
+      description: Admin can get all project project
+      responses:
+        '200': # status code
+          description: return success message.
+        '403': # status code
+          description: Unauthorized User
+      components:
+        securitySchemes:
+          bearerAuth: # arbitrary name for the security scheme
+            type: http
+            scheme: bearer
+            bearerFormat: JWT
+      security:
+        - BearerAuth: []
+  /admin/projects/{proId}:
+    get:
+      tags:
+        - Admin
+      summary:
+      description: Admin can get project by ID
+      parameters:
+        - name: proId
+          in: path
+          description: Id OF The project
+          required: true
+          schema:
+            type: string
+      responses:
+        '200': # status code
+          description: return success message.
+        '409': # status code
+          description: Invalid Id
+        '403': # status code
+          description: Unauthorized User
+      components:
+        securitySchemes:
+          bearerAuth: # arbitrary name for the security scheme
+            type: http
+            scheme: bearer
+            bearerFormat: JWT
+      security:
+        - BearerAuth: []
+  /admin/projects/{proId}/card/{cardId}:
+    get:
+      tags:
+        - Admin
+      summary: Admin can get card in specific project.
+      description: This Api endpoint is used to get card project.
+      parameters:
+        - name: proId
+          in: path
+          description: ID of the project to update
+          required: true
+          schema:
+            type: string
+        - name: cardId
+          in: path
+          description: ID of the card
+          required: true
+          schema:
+            type: string
+      responses:
+        '200': # status code
+          description: return with object
+        '401': # status code
+          description: Invalid
+      components:
+        securitySchemes:
+          bearerAuth: # arbitrary name for the security scheme
+            type: http
+            scheme: bearer
+            bearerFormat: JWT
+      security:
+        - BearerAuth: []
+    put:
+      tags:
+        - Admin
+      summary: Admin can update card in specific project.
+      description: This Api endpoint is used to update card.
+      parameters:
+        - name: proId
+          in: path
+          description: ID of the project
+          required: true
+          schema:
+            type: string
+        - name: cardId
+          in: path
+          description: ID of the card
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: This Api endpoint is used to update card.
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                todo:
+                  type: string
+                  example: The Test
+                priority:
+                  type: string
+                  example: Low
+                status:
+                  type: string
+                  example: Done
       responses:
         '200': # status code
           description: return with object
